# xllm

./: .gitmodules  CMakeLists.txt  PCACHE_DISAGG_INVESTIGATION.md  README.md  env.py  onerec_constrained_topk_future_notes.md  pyproject.toml  qwen3_5_27b_flashcomm1_rfc.md  setup.py
tests/core/framework/parallel_state/: CMakeLists.txt  cp_group_ranks_test.cpp  cp_plan_test.cpp  dual_parallel_args_test.cpp  flash_comm1_context_test.cpp  mega_moe_comm_resource_test.cpp  npu_cp_capability_test.cpp  npu_cp_closure_test.cpp  npu_cp_ep_padding_cmp_test.cpp  npu_cp_ep_padding_plan_test.cpp  npu_cp_plan_test.cpp  npu_cp_prefill_plan_cmp_test.cpp  npu_cp_prefill_plan_test.cpp  npu_cp_slots_cmp_test.cpp  npu_dp_ep_padding_test.cpp  parallel_state_test.cpp
tests/core/kernels/npu/: CMakeLists.txt  activation_test.cpp  mega_moe_test.cpp  mtp_prepare_next_draft_test.cpp  npu_xllm_ops_test.cpp
tests/core/kernels/npu/tilelang/: CMakeLists.txt  spec_verify_attention_tiling_update_wrapper_test.cpp  spec_verify_metadata_update_wrapper_test.cpp  spec_verify_token_update_wrapper_test.cpp  split_qkv_rmsnorm_mrope_wrapper_test.cpp
tests/core/layers/: CMakeLists.txt  dsa_topk_share_plan_test.cpp
tests/core/layers/cuda/: CMakeLists.txt  rwkv7_decoder_layer_test.cpp
tests/core/layers/mlu/: CMakeLists.txt  deepseek_v2_attention_multi_device_test.cpp  deepseek_v2_decoder_layer_test.cpp  deepseek_v2_sparse_moe_block_test.cpp  deepseek_v32_sp_utils_test.cpp  deepseek_v4_attention_test.cpp  deepseek_v4_compressor_test.cpp  deepseek_v4_indexer_test.cpp  dsa_topk_relay_test.cpp  indexer_test.cpp  qwen3_5_gated_delta_net_ops_test.cpp  qwen3_5_gated_delta_net_test.cpp  qwen3_next_rms_norm_test.cpp
tests/core/layers/npu_torch/: CMakeLists.txt  dsa_cp_metadata_tests.cpp  mega_moe_policy_test.cpp  mega_moe_runtime_test.cpp
tests/core/platform/mlu/: CMakeLists.txt  host_page_aligned_region_test.cpp  mlu_batch_memcpy_test.cpp  mlu_layer_synchronizer_test.cpp
tests/core/scheduler/: CMakeLists.txt  continuous_scheduler_test.cpp  disagg_pd_chunked_prefill_scheduler_test.cpp  disagg_pd_scheduler_test.cpp  fixed_steps_scheduler_test.cpp  lopsided_defer_gate_test.cpp  scheduler_policy_test.cpp
tests/core/scheduler/profile/: profile_graph_warmup_test.cpp
xllm/core/framework/parallel_state/: CMakeLists.txt  collective_communicator.cpp  collective_communicator.h  collective_communicator_base.h  dit_collective_communicator.cpp  flash_comm1_context.cpp  flash_comm1_context.h  mapping_npu.cpp  mega_moe_comm_resource.cpp  mega_moe_comm_resource.h  npu_cp_closure.h  npu_cp_ep_padding.cpp  npu_cp_ep_padding.h  npu_cp_plan.cpp  npu_cp_plan.h  npu_cp_prepare.cpp  npu_cp_prepare.h  npu_dp_ep_padding.cpp  npu_dp_ep_padding.h  npu_process_group.cpp  npu_process_group.h  parallel_args.h  parallel_state.cpp  parallel_state.h  parallel_state_async.cpp  process_group.cpp  process_group.h
xllm/core/framework/parallel_state/single_process/: hccl_process_group.cpp  hccl_process_group.h
xllm/core/kernels/: CMakeLists.txt  ops_api.cpp  ops_api.h  param.h  xllm_torch_ops.h
xllm/core/kernels/cuda/: CMakeLists.txt  batch_prefill.cpp  cuda_ops_library.cpp  llm_decode_metadata_update.cu  llm_decode_metadata_update.h  rope.cu  xllm_attention_ops.cpp  xllm_attention_ops.h  xllm_ops_library.cpp
xllm/core/kernels/dcu/: CMakeLists.txt  aiter_quant_adapter.cpp  causal_conv1d_adapter.cpp  causal_conv1d_adapter.h  dcu_ops_api.h  topk_gate.cpp
xllm/core/kernels/dcu/causal_conv1d/: causal_conv1d.h  causal_conv1d_common_hip.h  causal_conv1d_fwd.hip  causal_conv1d_new_interface.hip  causal_conv1d_update.hip
xllm/core/kernels/mlu/: beam_search.cpp  causal_conv1d_fn.cpp  causal_conv1d_update_decode.cpp  chunk_gated_delta_rule.cpp  compressor.cpp  fused_post_conv_prep.cpp  fused_recurrent_gated_delta_rule.cpp  fused_recurrent_gated_delta_rule_packed_decode.cpp  fused_sigmoid_gating_delta_rule_update.cpp  gated_layer_norm.cpp  gemma_rms_norm.cpp  mlu_ops_api.h
xllm/core/kernels/mlu/triton_kernel/: causal_conv1d_update_decode.py  fused_post_conv_prep.py  fused_recurrent_gated_delta_rule_packed_decode.py  fused_sigmoid_gating_delta_rule_update.py
xllm/core/kernels/musa/: CMakeLists.txt  activation.cu  attention_decode.cpp  attention_prefill.cpp  attention_runner.cpp  attention_runner.h  fused_layernorm.cpp  gdn_decode.cu  gdn_ops.h  gdn_prefill.cpp  gemma_norm.cu  global_capture_instance.cpp  global_capture_instance.h  llm_decode_metadata_update.cu  llm_decode_metadata_update.h  musa_ops_api.h  musa_tvmffi_stream.cpp  musa_tvmffi_stream.h  paged_cache.cu  piecewise_graphs.cpp  piecewise_graphs.h  random_sample.cpp  rope.cu  torch_musa_ops_api.h
xllm/core/kernels/npu/: CMakeLists.txt  active.cpp  attention.cpp  matmul.cpp  matmul_reduce_scatter.cpp  mega_moe_acl_contract.h  npu_adalayernorm.cpp  npu_causal_conv1d.cpp  npu_fused_infer_attention.cpp  npu_grouped_matmul.cpp  npu_mega_moe.cpp  npu_ops_api.h  npu_ops_library.cpp  npu_ops_library.h  rec_constrained_topk.cpp  rope.cpp
xllm/core/kernels/npu/aclnn/: pytorch_npu_helper.hpp
xllm/core/kernels/npu/tilelang/: CMakeLists.txt  causal_conv1d_wrapper.cpp  (+5 more)
xllm/core/scheduler/: CMakeLists.txt  async_response_processor.cpp  async_response_processor.h  auto_flip_stats.h  chunked_prefill_scheduler.cpp  chunked_prefill_scheduler.h  continuous_scheduler.cpp  continuous_scheduler.h  decode_first_policy.cpp  disagg_pd_chunked_prefill_scheduler.cpp  disagg_pd_chunked_prefill_scheduler.h  disagg_pd_scheduler.cpp  disagg_pd_scheduler.h  dit_scheduler.h  fixed_steps_scheduler.cpp  fixed_steps_scheduler.h  fixed_steps_scheduler_test.cpp  mix_scheduler.cpp  mix_scheduler.h  mode_switch_service.cpp  pd_ooc_scheduler.cpp  pd_ooc_scheduler.h  prefill_first_policy.cpp  prefill_only_scheduler.cpp  prefill_only_scheduler.h  scheduler_factory.cpp  scheduler_factory.h  scheduler_policy.cpp  scheduler_policy.h  unified_policy.cpp  zero_eviction_scheduler.cpp  zero_eviction_scheduler.h
xllm/core/scheduler/profile/: CMakeLists.txt  graph_warmup.cpp  graph_warmup.h  profile_manager.cpp  profile_manager.h
(+873 files in other folders)
