include(cc_library)


add_subdirectory(profile)

cc_library(
  NAME
    scheduler
  HDRS
    scheduler_policy.h
    zero_eviction_scheduler.h
    continuous_scheduler.h
    disagg_pd_chunked_prefill_scheduler.h
    disagg_pd_scheduler.h
    pd_ooc_scheduler.h
    async_response_processor.h
    scheduler.h
    dit_scheduler.h
    scheduler_factory.h
    request_priority_queue.h
    perf_model.h
    fixed_steps_scheduler.h
  SRCS
    scheduler_policy.cpp
    prefill_first_policy.cpp
    decode_first_policy.cpp
    unified_policy.cpp
    zero_eviction_scheduler.cpp
    continuous_scheduler.cpp
    disagg_pd_chunked_prefill_scheduler.cpp
    disagg_pd_scheduler.cpp
    pd_ooc_scheduler.cpp
    async_response_processor.cpp
    dit_scheduler.cpp
    scheduler_factory.cpp
    perf_model.cpp
    fixed_steps_scheduler.cpp
  DEPS
    :batch
    :distributed_runtime
    :request
    :runtime
    :profile
    :pd_topology_guard
    glog::glog
    Folly::folly
    absl::time
    absl::synchronization
)
