include(cc_library)

if(USE_NPU)
  cc_library(
    NAME
      mega_moe_comm_resource
    HDRS
      mega_moe_comm_resource.h
    SRCS
      mega_moe_comm_resource.cpp
    DEPS
      torch
      torch_npu
      ascendcl
      hccl
      hcomm
      glog::glog
  )
  target_link_libraries(mega_moe_comm_resource PRIVATE ${CMAKE_DL_LIBS})

endif()

cc_library(
  NAME
    parallel_state
  HDRS
    mapping_npu.h
    npu_cp_ep_padding.h
    npu_cp_prepare.h
    npu_dp_ep_padding.h
    dit_mapping.h
    rank_generator.h
    parallel_args.h
    parallel_state.h
    process_group.h
    $<$<BOOL:${USE_NPU}>:npu_rank_table_env.h>
    $<$<BOOL:${USE_NPU}>:npu_process_group.h>
    $<$<BOOL:${USE_MLU}>:mlu_process_group.h>
    $<$<BOOL:${USE_MUSA}>:musa_process_group.h>
    $<$<OR:$<BOOL:${USE_CUDA}>,$<BOOL:${USE_DCU}>>:cuda_process_group.h>
    $<$<BOOL:${USE_ILU}>:ilu_process_group.h>
    collective_communicator_base.h
    collective_communicator.h
    dit_collective_communicator.h
  SRCS
    mapping_npu.cpp
    npu_cp_ep_padding.cpp
    npu_cp_prepare.cpp
    npu_dp_ep_padding.cpp
    dit_mapping.cpp
    parallel_state.cpp
    parallel_state_async.cpp
    process_group.cpp
    $<$<BOOL:${USE_NPU}>:npu_rank_table_env.cpp>
    $<$<BOOL:${USE_NPU}>:npu_process_group.cpp>
    collective_communicator.cpp
    dit_collective_communicator.cpp
  DEPS
    :common
    torch
    $<$<BOOL:${USE_MLU}>:torch_mlu>
    $<$<BOOL:${USE_MUSA}>:torch_musa>
    $<$<BOOL:${USE_NPU}>:torch_npu>
    $<$<BOOL:${USE_NPU}>:hccl>
    $<$<BOOL:${USE_NPU}>:hcomm>
    $<$<BOOL:${USE_NPU}>:xllm_atb_layers>
    $<$<BOOL:${USE_NPU}>:mega_moe_comm_resource>
    gflags::gflags
    glog::glog
)
